--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -145,9 +145,15 @@ jobs:
       - name: Prepare Files for upload
         run: |
           mkdir artifact
-          cp dist/browsermon artifact/
           cp README.md artifact/
           cp browsermon.conf artifact/
+
+          if [ "${{ matrix.os }}" == "windows-latest" ]; then
+            cp dist/browsermon.exe artifact/
+          else
+            cp dist/browsermon artifact/
+          fi
+        shell: bash
 
       - name: Create Troubleshooter exe
         run: pyinstaller -F troubleshoot/browsermon_ts.py
