--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -194,15 +194,14 @@ jobs:
 
       - name: Zip Downloaded Artifacts
         run: |
-          cd browsermon-${{ matrix.os }}-${{ matrix.architecture }}
-          zip -r browsermon-${{ matrix.os }}-${{ matrix.architecture }}.zip *
-          cd ..
+          cd artifact/browsermon-${{ matrix.os }}-${{ matrix.architecture }}
+          zip -r browsermon-${{ matrix.os }}-${{ matrix.architecture }}-${{ github.ref_name }}.zip *
 
       - name: Upload Zipped Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: zipped-artifacts-${{ matrix.os }}-${{ matrix.architecture }}
-          path: browsermon-${{ matrix.os }}-${{ matrix.architecture }}.zip
+          name: browsermon-${{ matrix.os }}-${{ matrix.architecture }}-${{ github.ref_name }}
+          path: zipped-artifact
 
   finalize_release:
     name: Finalize Release
@@ -219,9 +218,9 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            browsermon-windows-latest-x64-${{ github.ref_name }}.zip
-            browsermon-windows-latest-x86-${{ github.ref_name }}.zip
-            browsermon-ubuntu-latest-x64-${{ github.ref_name }}.zip
+            zipped-artifacts/browsermon-windows-latest-x64-${{ github.ref_name }}.zip
+            zipped-artifacts/browsermon-windows-latest-x86-${{ github.ref_name }}.zip
+            zipped-artifacts/browsermon-ubuntu-latest-x64-${{ github.ref_name }}.zip
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
