--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -200,7 +200,7 @@ jobs:
       - name: Upload Zipped Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: zipped-artifact
+          name: zipped-artifacts
           path: artifact/browsermon-${{ matrix.os }}-${{ matrix.architecture }}-${{ github.ref_name }}.zip
 
   finalize_release:
